DPK/QCDW32/qcwin.h


typedef  long    HGRAPH;              
typedef  HANDLE   HGOBJ;               
typedef  HANDLE   HDATA;               
typedef  HGOBJ    FAR  *PHGOBJ;        
typedef  float    huge *HPFLOAT;       
typedef  realtype far  *LPREAL;        
typedef  int      far  *LPINT;
typedef  int		HGOBJ;         
typedef  UINT     HDATA;               
typedef  HGOBJ    *PHGOBJ;             
typedef  float    *HPFLOAT;            
typedef  realtype *LPREAL;             
typedef  int      *LPINT;
#define MAX_ALMNAME 16
#define MAXMOUSEEVENTS 8 
typedef struct  
{
   LOGPEN  lp;               
   int   nWidth;           
   long   nColor;           
   HWND    hwnd;             
}  LINEDESC;
typedef struct
{
    HGRAPH  hPage;             
    HWND    hwnd;              
    void    (CALLBACK *lpfnPage) (LPVOID); 
    HWND    hwParent;          
    int     cxVExt;            
    int     cyVExt;      
    int     cxWExt;            
    int     cyWExt;      
    DWORD   rgbBkColor;        
    int   nMapMode;          
    int   nNumGraphs;        
    int   nGraphCount; 
    int   nSavMapMode;
    BOOL    fInitGraph;        
    BOOL    fLoaded;
    BOOL    fDynamic;          
    HGRAPH  hSelGraph;         
    HGRAPH  hPrevSelGraph;     
    BOOL    fDispSel;          
    BOOL    fPrevDispSel;      
    BOOL    fHigh;             
    BOOL    reserved1;         
    BOOL    fBlow;             
    BOOL    fMeta;             
    float   fSelxOrg;          
    float   fSelyOrg;          
    float   fSelxExt;         
    float   fSelyExt;
    float   rXOrigCoef;        
    float   rYOrigCoef;        
    int     cxVExtOrig;        
    int     cyVExtOrig;      
    int    nLTickSize;           
    int    nSTickSize;           
    char    szFileName[MAXPATHLEN]; 
    char    szName[16];        
    BOOL    cMapIsotr;         
    int    bFixedText;        
    long    wUserWord1;        
    long    wUserWord2;        
    LPVOID  lpTopDesc;         
    HGLOBAL hGrMem [MAX_GRAPHS]; 
    HWND    hwndButton [MAX_GRAPHS];   
    DWORD   dwSignature;
    int     nPosStyle;
} PAGE_DEF;
typedef PAGE_DEF far *PPAGE_DEF;
typedef OBJ_HEAD FAR *POBJ_HEAD;
typedef struct
{
    LINEDESC ld;
    int    nXScaleType;       
    int    nYScaleType;
    realtype rxInt;             
    realtype ryInt;
    realtype rxMin;             
    realtype rxMax;
    realtype ryMin;
    realtype ryMax;
    realtype rxLMin;            
    realtype rxLMax;
    realtype ryLMin;
    realtype ryLMax;
}  CUR_PAR;
#define MAXSAVEAXES 10
typedef struct
{
   int      nMouseAction;
   void    (CALLBACK *lpfnUserMouseProc) (HWND, LPVOID,  UINT , POINT ); 
} MOUSE_EVENT_DEF;
typedef struct
{
   HGRAPH  hGraph;            
   HWND    hwnd;              
   void    (CALLBACK *lpfnGraph) (LPVOID, HDC); 
   POBJ_HEAD pCurrentObjDesc;  
   COLORREF rgbWinBkColor;     
   COLORREF rgbPlotBkColor;    
   BOOL    fFirstTime;
   BOOL    fInit;
   LINEDESC bd;               
   BOOL    fBorder;           
   HDC     hdcPrint;          
   HDC     hdcMeta;           
   int     nDynamic;          
   RECT    rPlotCoord;        
   PPAGE_DEF pPageDesc;       
   int     xWOrg;             
   int     yWOrg;
   int     cxWExt;         
   int     cyWExt;
   int     xVOrg;             
   int     yVOrg;
   int     cxVExt;         
   int     cyVExt;
   float   fxOrg;             
   float   fyOrg;
   float   fxExt;         
   float   fyExt;
   float   fxExtOrig;         
   float   fyExtOrig;
   float   rpX1;              
   float   rpY1;              
   float   rpX2;         
   float   rpY2;
   CUR_PAR cp;               
   int   nMapMode;          
   int     cxLogPixel;        
   int     cyLogPixel;        
   int   nObjCounter;
   HGOBJ   hSelObj;           
   HGOBJ   hAxisX;
   HGOBJ   hAxisY;
   HDC     hdc;               
   int   nNumObjs;          
   LPVOID  pGCO;              
   DWORD   dwSignature;
   BOOL    cIgnorePlot;
   char    cRaised;           
   char    cRepaint;          
   WORD    wUserWord1;        
   WORD    wUserWord2;        
   HGLOBAL hObjDup;          
   HGLOBAL hObjArr;
   HGLOBAL FAR *pObjArr;          
   BOOL		bAddGrObj;
   BOOL    bBitBltMode;
   HBITMAP hGrBitmap;
   HDC hGrBitmapDC;
   MOUSE_EVENT_DEF MouseEventMap[MAXMOUSEEVENTS];
   HGLOBAL   hSaveAxisX[MAXSAVEAXES]; 
   HGLOBAL   hSaveAxisY[MAXSAVEAXES];
    int    nLTickSize;           
    int    nSTickSize;           
} GRAPH_DEF;
typedef GRAPH_DEF  *PGRAPH_DEF;
#define DYN_MAXVAL 32      
#define DYNTITLELEN 64          
#define DYNUNITSLEN 16          
#define MAX_DYNSETS 200         
#define MAX_ALMESLEN  32
#define TAGLEN        32        
#define MAX_ALM 7   
typedef struct                       
{
	float rAlVal;                
    char  szAlarmName [MAX_ALMESLEN]; 
}
ALARM_DEF;
typedef struct                  
{
    int    cNumChannels;            
    int    cUseCounter;
    char    szTitle [DYNTITLELEN]; 
	LPVOID  lpDDEDesc;             
    float   rNewVal [DYN_MAXVAL]; 
    float   rPrevVal[DYN_MAXVAL];
    HGLOBAL hRealData;            
    HPFLOAT hpRealData;           
    UINT    wRealTo;              
    BOOL    bHistFull;            
    int     nHistSize;            
    char    szUnits [DYNUNITSLEN]; 
    BOOL    cAlmMask;
    int     nXY;                   
    ALARM_DEF almHigh;             
    ALARM_DEF almLow;
    ALARM_DEF almHH;
    ALARM_DEF almLL;
    ALARM_DEF almRate;             
    ALARM_DEF almDev;              
    ALARM_DEF almFail;             
    realtype  rSetp;
    realtype  rHyst;               
    realtype  rDevHyst;            
    char szNormName [MAX_ALMNAME]; 
    ALARM_DEF almHighCh[DYN_MAXVAL];             
    ALARM_DEF almLowCh[DYN_MAXVAL];
    ALARM_DEF almHHCh[DYN_MAXVAL];
    ALARM_DEF almLLCh[DYN_MAXVAL];
    ALARM_DEF almRateCh[DYN_MAXVAL];             
    ALARM_DEF almDevCh[DYN_MAXVAL];              
    ALARM_DEF almFailCh[DYN_MAXVAL];             
    realtype  rSetpCh[DYN_MAXVAL];
    realtype  rHystCh[DYN_MAXVAL];               
    realtype  rDevHystCh[DYN_MAXVAL];            
    BOOL      bAlmSetCh[DYN_MAXVAL]; 
    BOOL      bAlmEnableCh[DYN_MAXVAL]; 
	BOOL      bCheckChAlarms;
	char szNormNameCh[DYN_MAXVAL][MAX_ALMNAME]; 
    BOOL      bCheckAlarms;        
    char      szTag[DYN_MAXVAL][TAGLEN]; 
    char      cPrevAlmOut[DYN_MAXVAL];  
    char      cAlmOut[DYN_MAXVAL];      
    UINT      wBinNewVal;               
    UINT      wBinPrevVal;   
    int     bNANCheck;
	HDATA   hDataSet; 
}
DYNDATA_DEF;
typedef DYNDATA_DEF far *PDYNDATA;
COLORREF WINAPI _export WGGetRGBColor (UINT wColor);
UINT     WINAPI _export WGGetPureColor (COLORREF rgbColor);
COLORREF WINAPI _export WGCreateShadeColor(COLORREF rgbColor);
BOOL WINAPI _export WGSetPlotArea (PGRAPH_DEF pGrDesc, HDC hdc,
    realtype  rX1, realtype  rY1, realtype  rX2, realtype rY2, int nColor);
void WINAPI _export WGSetAxesScale (PGRAPH_DEF pGrDesc,
    int nXScaleType, int nYScaleType);
void  WINAPI _export WGScalePlotArea (PGRAPH_DEF pGrDesc, realtype xmin,
    realtype ymin, realtype xmax, realtype ymax);
void  WINAPI _export WGSetXYIntercepts (PGRAPH_DEF pGrDesc,
    realtype rxInt, realtype ryInt);
void WINAPI _export WGSetLineStyle (PGRAPH_DEF pGrDesc, HDC hdc, 
    int nStyle, int nWidth, int nColor);
void WINAPI _export WGSetDataFormat (PGRAPH_DEF pGrDesc, HGOBJ  hObj, int width,
    int prec);
void WINAPI _export WGSetTextParams (int nColor, int nFamily,
    int nSize, int nStyle);
BOOL WINAPI _export WGSetTextByName (int nColor, LPCSTR szFontName,
    int nSize, int nStyle);
void WINAPI _export WGRaiseGraph (PGRAPH_DEF pGrDesc, int nRaiseFlag);
HGOBJ WINAPI _export WGDrawXAxis (PGRAPH_DEF pGrDesc, HDC hdc,
    realtype rTickSpace, int nSmallTicks, int nTickPos);
HGOBJ WINAPI _export WGDrawYAxis (PGRAPH_DEF pGrDesc, HDC hdc,
    realtype rTickSpace, int nSmallTicks, int nTickPos);
void WINAPI _export WGDrawGrid (PGRAPH_DEF pGrDesc, HGOBJ hAxis, int nGridType);
HGOBJ WINAPI _export WGGroupBargraph (PGRAPH_DEF pGrDesc, HDC hdc,
    HDATA hDataSet, realtype rWidth, int nJustify, int nBarType, int nGraphType,
    COLORREF FAR *lpRgbBarColor, LPINT lpHatchStyle, LPINT lpBorderColor);
HGOBJ WINAPI _export WGFloatingBars (PGRAPH_DEF pGrDesc, HDC hdc,
    HDATA hDataSet, realtype rWidth, int nJustify, int nBarType,      
    COLORREF rgbBarColor, int nHatchStyle, int nBorderColor);
BOOL WINAPI _export WGAutoAxes (PGRAPH_DEF pGrDesc, HDC hdc, HDATA hDataSet,
    int nRoundType, int nInterceptFlag, PHGOBJ lphAxX, PHGOBJ lphAxY,
    PHGOBJ lphLabX, PHGOBJ lphLabY);
HGOBJ WINAPI _export WGLinePlot (PGRAPH_DEF pGrDesc, HDC hdc, HDATA hDataSet,
    BOOL bFill, BOOL bSpline);
HGOBJ WINAPI _export WGScatterPlot (PGRAPH_DEF pGrDesc, HDC hdc, HDATA hDataSet,
    int nMarkerShape, int nMarkerColor, int nMarkerSize,
    int nMarkerStyle, BOOL bDrop);
HGOBJ WINAPI _export WGLineMarkerPlot (PGRAPH_DEF pGrDesc, HDC hdc,
    HDATA hDataSet, int nMarkerShape, int nMarkerColor,
    int nMarkerSize, int nMarkerStyle);
HGOBJ WINAPI _export WGBargraph (PGRAPH_DEF pGrDesc, HDC hdc, HDATA hDataSet,
    realtype rWidth, int nJustify, int nBarType, COLORREF rgbBarColor,
    int nHatchStyle, int nBorderColor);
HGOBJ WINAPI _export WGStackedLines (PGRAPH_DEF pGrDesc, HDC hdc, HDATA hDataSet,
  BOOL bFill, LPINT lpLineStyle, LPINT lpLineWidth, LPINT lpLineColor);
HGOBJ WINAPI _export WGHighLowClose (PGRAPH_DEF pGrDesc, HDC hdc, HDATA hDataSet,
    int nMarkerShape, int nMarkerColor, int nMarkerSize,
    int nMarkerStyle);
HGOBJ WINAPI _export WGErrorBars (PGRAPH_DEF pGrDesc, HDC hdc, HDATA hDataSet,
    int nWidth);
HGOBJ WINAPI _export WGLabelAxis(PGRAPH_DEF pGrDesc, HDC hdc, HGOBJ hAxis,
   int nLabelPos, int nFormat, int nPrec, int nLast, LPSTR lpTextLast);
HGOBJ WINAPI _export WGLabelAxisStrings(PGRAPH_DEF pGrDesc, HDC hdc, HGOBJ hAxis,
    int nLabelPos, int nFirstTick, HGLOBAL hStr);
HGOBJ WINAPI _export WGLabelAxisStringsPtr(PGRAPH_DEF pGrDesc, HDC hdc, HGOBJ hAxis,
    int nLabelPos, int nFirstTick, LPSTR lpStr);
HGOBJ WINAPI _export WGLabelAxisMonth (PGRAPH_DEF pGrDesc, HDC hdc, HGOBJ hAxis,
    int nLabelPos, int nFirstTick, int nFirstMonth, BOOL bShort);
HGOBJ WINAPI _export WGLabelAxisDayWk (PGRAPH_DEF pGrDesc, HDC hdc, HGOBJ hAxis,
    int nLabelPos, int nFirstTick, int nFirstDay, BOOL bShort);
HGOBJ WINAPI _export WGTextNorm (PGRAPH_DEF pGrDesc, HDC hdc, LPSTR lpString,
			  realtype rX, realtype  rY, UINT wAlign, int nOrientation);
HGOBJ WINAPI _export WGText (PGRAPH_DEF pGrDesc, HDC hdc, HGOBJ hAxisX,
    HGOBJ hAxisY, LPSTR lpString, realtype rX, realtype rY, UINT wAlign,
    int nOrientation);
HGOBJ WINAPI _export WGTitleGraph(PGRAPH_DEF pGrDesc, HDC hdc, LPSTR lpTitle);
HGOBJ WINAPI _export WGTitleAxis(PGRAPH_DEF pGrDesc, HDC hdc, HGOBJ hAxis,
    int nTitlePos, LPSTR lpTitle);
void WINAPI _export WGLabelPie(PGRAPH_DEF pGrDesc, HGOBJ hPie, HGLOBAL hLabels);
HGOBJ WINAPI _export WGPieChart (PGRAPH_DEF pGrDesc, HDC hdc, HGLOBAL hData,
    int nNumPoints, int nPieStyle, int nNumType, int nNumPos,
    realtype rDiam, realtype rXCenter, realtype rYCenter,
    COLORREF FAR *lpRgbPieColor,
    LPINT lpBorderColor, LPINT lpHatchStyle, LPREAL lprExplodeRel);
HGOBJ WINAPI _export WGAutoLegend (PGRAPH_DEF pGrDesc, HDC hdc,
        realtype rX, realtype rY, int nBorderColor, int nBorderWidth, 
        int nTextColor, int nBackColor, int nLayout, HGLOBAL hStr);
HGOBJ WINAPI _export WGAutoLegendGroup (PGRAPH_DEF pGrDesc, HDC hdc,
    realtype  rX, realtype  rY, int nBorderColor, int nBorderWidth,
    int nTextColor, int nBackColor, int nLayout, HGLOBAL hStr,
    HGOBJ hObj);
HGOBJ  WINAPI _export WGLegend (PGRAPH_DEF pGrDesc, HDC hdc,
        realtype  rX1, realtype rY1, realtype  rX2, realtype rY2,
        int nBorderColor, int nBorderWidth, 
        int nTextColor, int nBackColor, int nLayout, HGLOBAL hStr);
HGOBJ  WINAPI _export WGLegendPtr (PGRAPH_DEF pGrDesc, HDC hdc,
        realtype  rX1, realtype rY1, realtype  rX2, realtype rY2,
        int nBorderColor, int nBorderWidth, 
        int nTextColor, int nBackColor, int nLayout, LPSTR lpStr);
HGOBJ  WINAPI _export WGLegendGroup (PGRAPH_DEF pGrDesc, HDC hdc,
        realtype  rX1, realtype rY1, realtype  rX2, realtype rY2,
        int nBorderColor, int nBorderWidth, int nTextColor, 
        int nBackColor, int nLayout, HGLOBAL hStr, HGOBJ hObj);
HGOBJ  WINAPI _export WGLegendGroupPtr (PGRAPH_DEF pGrDesc, HDC hdc,
        realtype  rX1, realtype rY1, realtype  rX2, realtype rY2,
        int nBorderColor, int nBorderWidth, int nTextColor, 
        int nBackColor, int nLayout, LPSTR lpStr, HGOBJ hObj);
#define HDIB HANDLE
	#define  MAXBMNAMELEN  80
typedef struct  
{
   int     nOrigMarkerSize;    
   int     nMarkerSize;        
   int       nMarkerLogSize;     
   long      nMarkerColor;       
   int     nMarkerShape;
   int       nMarkerStyle;       
   BOOL      cDrop;              
	char      szBmpName[MAXBMNAMELEN];  
	char      szMetaName[MAXBMNAMELEN]; 
    HGOBJ     hImage;             
}  SCATTER_DESC;
typedef SCATTER_DESC far *PSCAT_DESC;