DPK/QCDW32/qcwin.pas


   cp: CUR_PAR;               { current parameters}
{$ifndef RTFL}
  {$ifndef VER130}
   alignment3: INTEGER;
   {$endif}
{$endif}
   nMapMode: Integer;          {}
   cxLogPixel,        { width  of 1 pixel in logical units}
   cyLogPixel: INTEGER;        { height of 1 pixel in logical units}
   nObjCounter: Integer;
   hSelObj,           { selected object handle}
   hAxisX,
   hAxisY: HGOBJ;

   thdc: HDC;
   nNumObjs : Integer;        { number of objects in the graph }

   pGCO: POINTER;              // pointer to Graph Class Object (MFC only)
   dwSignature: DWORD;
   r1,r2,r3: BYTE;
   cIgnorePlot: BOOLEAN;
   cRaised: BYTE;                 { own hdc (real time only) }
   cRepaint: BYTE;          { if != 0 repaint graph background }

   wUserWord1,        { user can do anything with this fields }
   wUserWord2: WORD;

   hObjDup,          { memory handle for an object copy, for editing }
   hObjArr: HGLOBAL;
   pObjArr: ^HGLOBAL;          { pointer to array of object memory handles }
   bAddGrObj: BOOL;
   bBitBltMode: BOOL;
   hGrBitmap: THANDLE;
   hGrBitmapDC: HDC;
//   int      MouseEventMap[MAXMOUSEEVENTS];
//   void    (CALLBACK *lpfnUserMouseProc) (WND, PGRAPH_DEF,  UINT , POINT );
//    Alignment4: INTEGER;
    MouseEventMap: ARRAY[0..MAXMOUSEEVENTS-1] OF MOUSE_EVENT_DEF;
    hSaveAxisX: ARRAY[0..MAXSAVEAXES-1] OF HGLOBAL;
    hSaveAxisY: ARRAY[0..MAXSAVEAXES-1] OF HGLOBAL;
    nLTickSize: INTEGER;
    nSTickSize: INTEGER;

end;

PGRAPH_DEF = ^GRAPH_DEF;

{************************************************************************}
{ Dynamic data definitions **********************************************}
{************************************************************************}
const

 DYN_MAXVAL =32;      { maximal number of dynamic elements per object }
 DYNTITLELEN =64;          { DATA SET TITLE length }
 DYNUNITSLEN =16;          { length of eng. units string }
 MAX_DYNSETS =200;         { max. number of dynamic data sets }
 MAX_ALMESLEN  =32;
 TAGLEN        =32;        { channel tag length }
 MAX_ALM =7;   { max. number of alarm types }

{ Every dynamic object can have up to DYN_MAXVAL individual elements }

{************************************************************************}
type
ALARM_DEF = record                       { dynamic element descriptor }

    rAlVal: SINGLE;                { alarm value }
    szAlarmName: array [0..MAX_ALMESLEN-1] of CHAR; { alarm name }
end;

{************************************************************************}


DYNDATA_DEF = record


    cNumChannels,            { from 1 up to 32 }
    cUseCounter: Integer;
    szTitle: array[0..DYNTITLELEN-1] of CHAR; { unique title of the data set  2 }
    lpDDEDesc: POINTER;             { pointer to DDE descriptor, or NULL 44 }

    rNewVal, rPrevVal: array[0..DYN_MAXVAL-1] of SINGLE; { 48 }
    hRealData: HGLOBAL;            { memory handle for historical data array }
    hpRealData: HPFLOAT;           { huge pointer to historical data array }
    wRealTo: UINT;              { index to the next value }
    bHistFull: BOOL;            { TRUE after data array is first filled }
    nHistSize: INTEGER;            { number of samples in history buffer (real values) }
    szUnits: array[0..DYNUNITSLEN-1] of CHAR; { engineering units }
    cAlmMask: BOOL;
    nXY: INTEGER;                   { set to 1 if data used by XY plot }

    almHigh,             { alarm descriptors }
    almLow,
    almHH,
    almLL,
    almRate,             { rate of change value, per second }
    almDev,              { deviation (setp - meas) }
    almFail: ALARM_DEF;             { fail (DDE) }
    rSetp,
    rHyst,               { high and low alarm hysteresis }
    rDevHyst: Realtype;            { deviation alarm hysteresis     }
    szNormName: array[0..MAX_ALMNAME-1] of CHAR; { normal state name }
    almHighCh,almLowCh, almHHCh,almLLCh,
    almRateCh, almDevCh,
    almFailCh: ARRAY[0..DYN_MAXVAL-1] OF ALARM_DEF;
    rSetpCh: ARRAY[0..DYN_MAXVAL-1] OF Realtype;
    rHystCh: ARRAY[0..DYN_MAXVAL-1] OF Realtype;
    rDevHystCh: ARRAY[0..DYN_MAXVAL-1] OF Realtype;
    bAlmSetCh: ARRAY[0..DYN_MAXVAL-1] OF BOOL;
    bAlmEnableCh: ARRAY[0..DYN_MAXVAL-1] OF BOOL;
    bCheckChAlarms: BOOL;

    szNormNameCh: ARRAY[0..DYN_MAXVAL-1,0..MAX_ALMNAME-1] OF CHAR;

    bCheckAlarms: BOOL;        { if TRUE, check alarms }
    szTag: array[0..DYN_MAXVAL-1,0..TAGLEN-1] of CHAR; { channel tags }
    cPrevAlmOut,  { previous alarm output for every channel }
    cAlmOut: array[0..DYN_MAXVAL-1] of CHAR;      { alarm output for every channel }
    wBinNewVal,               { binary channels }
    wBinPrevVal: UINT;
    bNANCheck: INTEGER;
    hDataSet: HDATA;
end;

PDYNDATA = ^DYNDATA_DEF;



 SCATTER_DESC = record

        nOrigMarkerSize,
        nMarkerSize,
        nMarkerLogSize,
        nMarkerColor,
        nMarkerShape,
        nMarkerStyle: INTEGER;
         cDrop: BOOL;
         nAlignment1: INTEGER;
	 szBmpName: ARRAY[0..MAXBMNAMELEN-1] OF Char;
	 szMetaName: ARRAY[0..MAXBMNAMELEN-1] OF Char;
         hImage: HGOBJ;
 end;

PSCAT_DESC = ^SCATTER_DESC ;

HDIB = THANDLE;


QCBasePage = class (tobject)
public
  procedure BuildPage(p: PPAGE_DEF); virtual;
end;
PQCBasePage = ^QCBasePage;

QCBaseGraph = class (tobject)
 public
 procedure BuildGraph(p: PGRAPH_DEF; thdc: HDC); virtual;
end;
PQCBaseGraph = ^QCBaseGraph;



{************************************************************************
 * COLOR FUNCTIONS
 ************************************************************************}
function WGGetRGBColor (wColor:UINT): TColorRef; stdcall;
function WGGetPureColor (rgbColor:TColorRef): UINT;  stdcall;
function WGCreateShadeColor (rgbColor:TColorRef): TColorRef;  stdcall;

{**********************************************************************}
{ Graphics Setup                                                       }
{**********************************************************************}

function WGSetPlotArea (pGrDesc:PGRAPH_DEF; thdc:HDC;
   rX1, rY1, rX2, rY2:RealType; nColor:INTEGER): BOOL; stdcall;
procedure WGSetAxesScale (pGrDesc:PGRAPH_DEF;
         nXScaleType, nYScaleType:INTEGER); stdcall;
procedure  WGScalePlotArea (pGrDesc:PGRAPH_DEF; xmin,
     ymin, xmax, ymax:RealType); stdcall;
procedure  WGSetXYIntercepts (pGrDesc:PGRAPH_DEF;
    rxInt, ryInt:Realtype); stdcall;
procedure WGSetLineStyle (pGrDesc:PGRAPH_DEF; thdc:HDC;
    nStyle, nWidth, nColor:INTEGER); stdcall;
procedure WGSetDataFormat (pGrDesc:PGRAPH_DEF; hObj:HGOBJ; width,
    prec:INTEGER); stdcall;
procedure WGSetTextParams (nColor, nFamily, nSize, nStyle:INTEGER); stdcall;
function  WGSetTextByName (nColor:INTEGER; szFontName:PChar; nSize,
     nStyle:INTEGER):BOOL; stdcall;
procedure WGRaiseGraph (pGrDesc:PGRAPH_DEF; nRaiseFlag:INTEGER); stdcall;

{************************************************************************
 * DRAWING FUNCTIONS
 ************************************************************************}
function  WGDrawXAxis (pGrDesc:PGRAPH_DEF; thdc:HDC;
     rTickSpace:RealType; nSmallTicks, nTickPos:INTEGER): HGOBJ; stdcall;
function  WGDrawYAxis (pGrDesc:PGRAPH_DEF; thdc:HDC;
     rTickSpace:RealType; nSmallTicks, nTickPos:INTEGER): HGOBJ; stdcall;
procedure WGDrawGrid (pGrDesc:PGRAPH_DEF; hAxis:HGOBJ; nGridType:INTEGER); stdcall;
function  WGGroupBargraph (pGrDesc:PGRAPH_DEF; thdc:HDC;
    hDataSet:HDATA; rWidth:Realtype;
    nJustify, nBarType, nGraphType:INTEGER;
    lpRgbBarColor:LPTColorRef;
    lpHatchStyle, lpBorderColor:LPInt): HGOBJ; stdcall;
function  WGFloatingBars (pGrDesc:PGRAPH_DEF; thdc:HDC;
    hDataSet:HDATA; rWidth:RealType;
    nJustify, nBarType:INTEGER;
    rgbBarColor:TColorRef; nHatchStyle, nBorderColor:INTEGER): HGOBJ; stdcall;

function  WGAutoAxes (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
    nRoundType, nInterceptFlag:INTEGER;
    var lphAxX, lphAxY, lphLabX, lphLabY:HGOBJ): BOOL; stdcall;

function  WGLinePlot (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
     bFill, bSpline:BOOL): HGOBJ; stdcall;

function  WGScatterPlot (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
    nMarkerShape, nMarkerColor, nMarkerSize, nMarkerStyle:INTEGER;
    bDrop:BOOL): HGOBJ; stdcall;

function  WGLineMarkerPlot (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
     nMarkerShape, nMarkerColor, nMarkerSize, nMarkerStyle:INTEGER): HGOBJ; stdcall;

function  WGBargraph (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
    rWidth:Realtype; nJustify, nBarType:INTEGER;
    rgbBarColor:TColorRef;
    nHatchStyle, nBorderColor:INTEGER): HGOBJ; stdcall;

function  WGStackedLines (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
   bFill:BOOL;
   lpLineStyle, lpLineWidth, lpLineColor:LPInt): HGOBJ; stdcall;

function  WGHighLowClose (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
    nMarkerShape, nMarkerColor, nMarkerSize, nMarkerStyle:INTEGER): HGOBJ; stdcall;

function  WGErrorBars (pGrDesc:PGRAPH_DEF; thdc:HDC; hDataSet:HDATA;
     nWidth:INTEGER): HGOBJ; stdcall;
function  WGLabelAxis (pGrDesc:PGRAPH_DEF; thdc:HDC; haxis:HGOBJ;
    nLabelPos:INTEGER; nFormat: UINT; nPrec, nLast:INTEGER;
    lpTextLast:PChar): HGOBJ; stdcall;

function  WGLabelAxisStrings (pGrDesc:PGRAPH_DEF; thdc:HDC; haxis:HGOBJ;
     nLabelPos, nFirstTick:INTEGER; hStr: HGLOBAL): HGOBJ; stdcall;
function  WGLabelAxisStringsPtr (pGrDesc:PGRAPH_DEF; thdc:HDC;
          haxis:HGOBJ; nLabelPos, nFirstTick:INTEGER; lpStr:LPSTR): HGOBJ; stdcall;
function  WGLabelAxisMonth (pGrDesc:PGRAPH_DEF; thdc:HDC; haxis:HGOBJ;
     nLabelPos, nFirstTick, nFirstMonth:INTEGER;
     bShort:BOOL): HGOBJ; stdcall;
function  WGLabelAxisDayWk (pGrDesc:PGRAPH_DEF; thdc:HDC; haxis:HGOBJ;
     nLabelPos, nFirstTick, nFirstDay:INTEGER; bShort:BOOL): HGOBJ; stdcall;
function  WGTextNorm (pGrDesc:PGRAPH_DEF; thdc:HDC; lpString:PChar;
          rX, rY:Realtype;
          wAlign: UINT; nOrientation:INTEGER): HGOBJ; stdcall;

function  WGText (pGrDesc:PGRAPH_DEF; thdc:HDC; hAxisX:HGOBJ;
    hAxisY:HGOBJ; lpString:PChar; rX, rY:RealType;
    wAlign: UINT;
    nOrientation:INTEGER): HGOBJ; stdcall;

function  WGTitleGraph (pGrDesc:PGRAPH_DEF; thdc:HDC; lpTitle:PChar): HGOBJ; stdcall;
function  WGTitleAxis (pGrDesc:PGRAPH_DEF; thdc:HDC; haxis:HGOBJ;
     nTitlePos:INTEGER; lpTitle:PChar): HGOBJ; stdcall;

procedure WGLabelPie (pGrDesc:PGRAPH_DEF; hPie:HGOBJ;
          hLabels: HGLOBAL); stdcall;

function  WGPieChart (pGrDesc:PGRAPH_DEF; thdc:HDC; hData:HDATA;
    nNumPoints, nPieStyle, nNumType, nNumPos:INTEGER;
    rDiam, rXCenter, rYCenter:Realtype;
    lpRgbPieColor,
    lpBorderColor, lpHatchStyle:LPINT;
    lprExplodeRel:LPReal): HGOBJ; stdcall;

function  WGAutoLegend (pGrDesc:PGRAPH_DEF; thdc:HDC;
          rX, rY:Realtype;
          nBorderColor, nBorderWidth,
          nTextColor, nBackColor, nLayout:INTEGER;
          hStr: HGLOBAL): HGOBJ; stdcall;

function WGAutoLegendGroup (pGrDesc:PGRAPH_DEF; thdc:HDC;
      rX, rY:Realtype;
      nBorderColor, nBorderWidth,
      nTextColor, nBackColor, nLayout:INTEGER;
      hStr: HGLOBAL;
      hObj:HGOBJ): HGOBJ; stdcall;

function  WGLegend (pGrDesc:PGRAPH_DEF; thdc:HDC;
        rX1, rY1, rX2, rY2:RealType;
        nBorderColor, nBorderWidth,
        nTextColor, nBackColor, nLayout:INTEGER;
        hStr: HGLOBAL): HGOBJ; stdcall;
function  WGLegendPtr (pGrDesc:PGRAPH_DEF; thdc:HDC;
        rX1, rY1, rX2, rY2:RealType;
        nBorderColor, nBorderWidth,
        nTextColor, nBackColor, nLayout:INTEGER;
        lpStr:LPSTR): HGOBJ; stdcall;

function WGLegendGroup (pGrDesc:PGRAPH_DEF; thdc:HDC;
        rX1, rY1, rX2, rY2:Realtype;
        nBorderColor, nBorderWidth, nTextColor,
        nBackColor, nLayout:INTEGER;
        hStr: HGLOBAL; hObj:HGOBJ): HGOBJ; stdcall;

function WGLegendGroupPtr (pGrDesc:PGRAPH_DEF; thdc:HDC;
        rX1, rY1, rX2, rY2:Realtype;
        nBorderColor, nBorderWidth, nTextColor,
        nBackColor, nLayout:INTEGER;
        lpStr:LPSTR; hObj:HGOBJ): HGOBJ; stdcall;
